# AMD

./: CHANGELOG  CMakeLists.txt  FindBoost.cmake  FindEigen3.cmake  FindGemmi.cmake  FindNanoflann.cmake  FindOpenBabel3.cmake  README.md
CrystaLibrary/: CMakeLists.txt
CrystaLibrary/include/: KDTreeVectorOfVectorsAdaptor.h  amds.h  chem.h  cifio.h  cmd.h  crystalstructure.h  eigensupport.h  geom.h  openbabelsupport.h  periodicpointcloud.h  stringhandler.h  unitcellreduction.h
CrystaLibrary/src/: amds.cpp  chem.cpp  cifio.cpp  cmd.cpp  crystalstructure.cpp  geom.cpp  periodicpointcloud.cpp  stringhandler.cpp  unitcellreduction.cpp
Main/: CMakeLists.txt  compute_amds.cpp
Scripts/: update_cif_to_fullmotif.py
windows-setup/: Setup.fs  windows-setup.fsproj
